# Code-Analysis-Agent

./: .env.example  .gitignore  Dockerfile  Embedding_Model_FineTuning.md  LICENSE  README.md  benchmarks.md  docker-compose.yml  pyproject.toml  requirements.txt
archive/4.10.25/: main.py  multi_agent_workflow.py
archive/4.24.25/: code_analysis_tools.py  old_agent_router.py  streamlit_app.py
archive/4.25.25/: README_prototype.md  example_tools.py  graph.html  graph_complex.html  graph_simple.html  memgraph.ipynb  micro_cypher_chain.py  micro_process.py  micro_text_answer.py  micro_tools.py  micro_visual_response.py
docs/: Data_engineering_agent.md  demo_script.md  developer_guide.md  milestone3.md  project_ideas.md  proposal.md  report.html  report.qmd
docs/assets/: CD.mmd  DFD.mmd  FS.mmd
docs/dsan6725/: AI_code_refactoring.md  QA_slackbot.md  deliverables.md
docs/milestones/: milestone2.md  project_ideas.md
docs/notebooks/: agent_code.py  code_relationships_graph.html  demo.ipynb  graph.html  graph_complex.html  graph_output  graph_simple.html  jaeho.ipynb  neo4j.ipynb
legacy/src/: app.py  plot_graph.py  structured_output.py
memgraph-platform/: docker-compose.yml
src/: agent_router.py  app.py  index.html  streamlit_app.py  streamlit_app2.py
src/agent_router/: __init__.py  graph.py  nodes.py  state.py
src/agents/: __init__.py  supervisor.py
src/app/: session_state.py
src/rag/: vector_rag.py
src/tools/: __init__.py  code_analysis_tools.py  micro_cypher_chain.py  micro_process.py  micro_text_answer.py  micro_tools.py  setup.py
(+23 files in other folders)
