[project]
name = "spring-2025-final-project-project-group-2"
version = "0.1.0"
description = "GenAI project for DSAN6725"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter-client>=8.6.3",
    "langchain>=0.3.19",
    "langchain-anthropic>=0.3.10",
    "langchain-community>=0.3.18",
    "langchain-experimental>=0.3.4",
    "langchain-neo4j>=0.4.0",
    "langchain-openai>=0.3.7",
    "langchain-pinecone>=0.2.4",
    "langgraph>=0.3.25",
    "langgraph>=0.3.27",
    "nbformat>=5.10.4",
    "neo4j>=5.28.1",
    "networkx>=3.4.2",
    "numpy>=1.26.4",
    "pip>=25.0.1",
    "pynvim>=0.5.2",
    "pyvis>=0.3.2",
    "seaborn>=0.13.2",
    "streamlit>=1.44.1",
]
